Bug 166883 - Layout issues - digital clock doesn't resize itself and content
Summary: Layout issues - digital clock doesn't resize itself and content
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-clock (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 174623 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-07-18 00:39 UTC by Elias Probst
Modified: 2008-11-18 03:10 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot showing the cutted text (6.45 KB, image/png)
2008-07-18 00:43 UTC, Elias Probst
Details
Plasma Digital Clock Space Issue (13.85 KB, image/jpeg)
2008-07-20 01:54 UTC, Dario Andres
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Elias Probst 2008-07-18 00:39:38 UTC
Version:           SVN r834059 (using Devel)
Installed from:    Compiled sources

If you enable some options in the settings of the digital clock (e.g. 'Show Date' and 'Show Timezone'), there is too much text for the applet.

But the applet doesn't resize accordingly, instead it cuts the text on the right/left edge (see attached screenshot).
Comment 1 Elias Probst 2008-07-18 00:43:04 UTC
Created attachment 26225 [details]
Screenshot showing the cutted text
Comment 2 Elias Probst 2008-07-18 01:00:33 UTC
I've just noticed, this layout issue is gone, as soon as you restart plasma.
So it's just there directly after adding the applet to the panel.
Makes the bug being not that worse as I've initially thought ;-)
Comment 3 Dario Andres 2008-07-20 01:54:41 UTC
Created attachment 26275 [details]
Plasma Digital Clock Space Issue
Comment 4 Dario Andres 2008-07-20 01:55:21 UTC
I think I have some related problem:
I placed my digital clock on a top panel (without a task manager) and the clock takes a lot of space in the panel. It doesn't adjust to its content.
See the attached screenshot
Comment 5 Dario Andres 2008-07-20 01:55:56 UTC
I forgot to mention: I'm using KDE 4.0.99 (RC1+) in ArchLinux
Comment 6 Elias Probst 2008-07-20 02:59:28 UTC
> I think I have some related problem: 
> I placed my digital clock on a top panel (without a task manager)
> and the clock takes a lot of space in the panel. It doesn't adjust
> to its content.
> See the attached screenshot

This is already described in bug#164317 and as Aaron J. Seigo told me, going to be fixed by using another layout strategy in the panels.
Comment 7 Sebastian Kügler 2008-11-17 04:14:34 UTC
SVN commit 885323 by sebas:

Correctly update the size when the date string has changed

Until now, it would lag one update (which can be the initial one giving
a bad first impression) behind when determining its minimumwidth in the
panel. It correctly takes as much space as needed right after startup
and also after config changes.
BUG:166883

 M  +10 -2     clock.cpp  
 M  +1 -0      clock.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=885323
Comment 8 Sebastian Kügler 2008-11-18 03:06:34 UTC
*** Bug 174425 has been marked as a duplicate of this bug. ***
Comment 9 Sebastian Kügler 2008-11-18 03:10:29 UTC
*** Bug 174623 has been marked as a duplicate of this bug. ***