Correctly update the size when the date string has changed

Until now, it would lag one update (which can be the initial one giving
a bad first impression) behind when determining its minimumwidth in the
panel. It correctly takes as much space as needed right after startup
and also after config changes.
BUG:166883

svn path=/trunk/KDE/kdebase/workspace/; revision=885323